src/parts/FilterBar.css
.filterbar {
  position: relative;
  background-color: #1b1a26;
  display: flex;
  align-items: center;
  width: 100%;
  font-size: 0.9rem;
  color: #80f077;
  text-shadow: 1px 1px green;
  border-top: 1px solid #2e2f41;
  height: 2.2rem;
  min-height: 2.2rem;
  max-height: 2.2rem;
}

.filterbar .back {
  border-right: 1px solid #2e2f41;
  width: calc(2rem + 1px);
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.filterbar .search {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  background-color: #1b1a26;
  padding: 0 0.5rem;
  border-right: 1px solid #2e2f41;
  opacity: 0.8;
}

.filterbar .search-results {
  color: lightgray;
  padding: 0 0.5rem;
}

.filterbar img {
  position: absolute;
  height: 1rem;
  width: 1rem;
  opacity: 0.8;
  z-index: 1;
  transform: translateX(50%);
  pointer-events: none;
}

.filterbar .filters {
  white-space: nowrap;
  overflow-x: scroll;
  height: 100%;
  display: flex;
}

.filterbar .filters span {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.filterbar .filters .filter-vals {
  margin-right: 0.5rem;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.filterbar .filters .filter-vals.on,
.filterbar .filters .filter-vals.sort {
  color: gold;
}

.filterbar .filters .filter-vals.map.on {
  background-color: rgba(255, 212, 0, 0.2);
}

.filterbar .filters .filter-vals.sel {
  border: 1px solid rgba(255, 212, 0, 0.8);
}

.filterbar .clear-filters {
  margin-left: auto;
  color: rgb(194, 49, 49);
  background: transparent;
  border: 0;
  opacity: 0.7;
  font-size: 0.9rem;
  border-left: 1px solid #2e2f41;
  height: 100%;
  width: 33px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#search-input {
  background-color: #1b1a26;
  display: flex;
  height: 100%;
  width: calc(2rem + 1px);
  user-select: auto;
  font-size: 1rem;
  border-top: 0;
  border-right: 1px solid #2e2f41;
  border-bottom: 0;
  border-left: 0;
  border-radius: 0;
  color: rgba(255, 215, 0, 0.96);
}

#search-input::placeholder {
  text-transform: capitalize;
}

#search-input.on {
  flex: 1;
  width: auto;
}

